refactor: OrderService 리팩토링